# unit-tests-check

./: CMakeLists.txt  README.md  REAMDE.md  calculator.c  main.c  test_calculator.c
